cmake_minimum_required(VERSION 3.6)
project(OpenMP-tasks)

set(CMAKE_CXX_STANDARD 11)

#set(SOURCE_FILES task2.cpp)
#add_executable(OpenMPTasks ${SOURCE_FILES})
add_executable(helloWorld helloWorld.cpp)
add_executable(task2 task2.cpp)
add_executable(task3 task3.cpp)
add_executable(task4 task4.cpp)
add_executable(task5 task5.cpp)
add_executable(task6 task6.cpp)
add_executable(task7 task7.cpp)
add_executable(task8 task8.cpp)
add_executable(task9 task9.cpp)
add_executable(task10 task10.cpp)
add_executable(task11 task11.cpp)
add_executable(task12 task12.cpp)
add_executable(task13 task13.cpp)

set(CMAKE_CXX_COMPILER /usr/local/Cellar/gcc/6.3.0_1/bin/g++-6)
set(CMAKE_C_COMPILER /usr/local/bin/gcc-6)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 -fopenmp -Wall")